@@ -1,3 +1,7 @@
+2002-01-11  Werner Koch  <wk@gnupg.org>
+
+	* sexp.c (gcry_sexp_canon_len): Fixed last change.
+
 2002-01-01  Timo Schulz <ts@winpt.org>
 
 	* stdmem.c (_gcry_private_realloc): if pointer is NULL now realloc
@@ -230,7 +234,7 @@ Tue Dec  8 13:15:16 CET 1998  Werner Koch  <wk@isil.d.shuttle.de>
 	* mpiapi.c: New
 
 	
- Copyright 1998,1999,2000,2001 Free Software Foundation, Inc.
+ Copyright 1998,1999,2000,2001,2002 Free Software Foundation, Inc.
 
  This file is free software; as a special exception the author gives
  unlimited permission to copy and/or distribute it, with or without
